Fix the layout issues, added some styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,3 +30,20 @@
     line-height: 10vh;
   }
 }
+
+.container-flex {
+  flex: 1 0 auto;
+  padding: var(--space) var(--space) 0;
+}
+
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.game-screen {
+  max-width: 960px;
+  height: 100%;
+  width: 100%;
+}
